# vapp

./: .gitignore  CMakeLists.txt  README.md  compile.bat  compile.sh  compile_android.sh  compile_linux.sh  compile_sg100.sh  env.sh
elf/: bayer_convert_ext_op  bit10_bit8_ext_op  color_space_conversion_ext_op  crop_flip_op  crop_scales_ext_op  cvtcolor_op  ext_op_export  ffmpeg_overlay_ext_op  flip_roi_op  resize_multi_op  rotate_rgba_interleaved_ext_op  rotate_rgba_interleaved_op_release  rotate_rgba_interleaved_roi_ext_op  scale_ext_op  simple_rotate_ext_op  video_meeting_ext_op  vpp_crop_op  vpp_flip_op
elf_sg100/: multi_core_op  rotate_rgba_interleaved_ext_op  rotate_rgba_interleaved_op_release  rotate_rgba_interleaved_roi_ext_op  simple_rotate_ext_op
include/: vapp.h  vappdefs.h  vappi.h  vast_runtime.h
sample_cas/: CMakeLists.txt  sample_cas.c
src/: Makefile  arithmetic_logical.c  color_conversion.c  compat.c  compat.h  detect.c  detect.h  filtering_functions.c  geometry_transforms.c  log.h  md5.c  md5.h  misc_params.h  rt_util.c  rt_util.h  vdsp_op.c  vdsp_op.h  xxhash32.c  xxhash32.h
test/: CMakeLists.txt  Makefile  ce_test.cpp  config.txt  getopt.c  getopt.h  op_case.c  op_case.h  test.c  test_case.c
